@@ -1,3 +1,0 @@
-Things to be done before phase one is done and therefore the testing of phase one can start. When the testing is done phase two can be started (the addition of boats).
-
-Rework the enchanter to make it more useful
