@@ -75,3 +75,5 @@ Changed features, from a player's perspective.
 * The assembly time for a vehicle is 100 ticks plus the sum of the modules' assembly time. The assembly time of a module used to be 5 * c^2.2 where c is its modular cost. This was changed to be 4 * c^2. This means that every module is faster to assemble but it's more noticeable for complex modules.
 
 * The disassemble time of a module used to be the same as the assemble time for a module. Now, the disassemble time for a module is a quarter of the assemble time for that module.
+
+* The enchanter now last 10 times as long for tools and 5 times as long for shooters before it has to be recharged.
